[tool.poetry]
name = "sqlalchemy_models"
version = "0.1.0"
description = ""
authors = ["Chris Lee <clee@codegen.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.36"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipdb = "^0.13.13"
mypy = "^1.13.0"
ruff = "^0.7.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.poetry.scripts]
test = 'pytest:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "ASYNC", "I"]

[tool.mypy]
files = ["sqlalchemy_models/"]
exclude = ["^tests/"]
python_executable = ".venv/bin/python"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
